Fix bug #83157.  Make the embedding widget handle reparenting and unrealize/re-realize. r=bryner,sr=tor,a=asa